# minimax

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: cargo.yml  rust.yml
src/: drivers.rs  lib.rs  main.rs  tests.rs
src/drivers/: mod.rs  tic_tac_toe.rs
src/games/: chess.rs  mod.rs  tic_tac_toe.rs
src/strategy/: alpha_beta_minimax.rs  game_strategy.rs  mod.rs
